FinallyMessage: fix font colors

--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -2,7 +2,7 @@
 
 .message {
   background: var(--secondary-color);
-  color: var(--bg-color);
+  color: var(--text-on-secondary-color);
   padding: 1em;
   margin-top: 5rem;
   margin-bottom: 5rem;
