--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -23,9 +23,11 @@
         }
     }
 
-    &:nth-child(3n+1) {
+    &:nth-child(3n+1):not(:only-child) {
         --bg-color: @yellow;
         --font-color: @red;
+        --secondary-color: @pink;
+        --text-on-secondary-color: @yellow;
         background: @yellow;
         color: @red;
 
