--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -13,6 +13,7 @@ body {
     --bg-color: @grey;
     --font-color: @red;
     --secondary-color: @yellow;
+    --text-on-secondary-color: @red;
 }
 
 h1, h2, h3 {
