Verifizierung: more disance to the crowd

--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -17,7 +17,7 @@
     height: 3rem;
     width: 3rem;
     margin-right: 1.5rem;
-    background: var(--bg-color);
+    background: var(--text-on-secondary-color);
     flex: 0 0 auto;
     animation-duration: 1s;
     animation-iteration-count: infinite;
