--- a/src/pages/verifizierung/style.module.less
+++ b/src/pages/verifizierung/style.module.less
@@ -1,3 +1,5 @@
+@import '../../components/style/vars.less';
+
 .finallyMessage {
   margin: 2rem 0;
 }
@@ -5,4 +7,12 @@
 .socialMedia {
   position: relative;
   z-index: 1;
+}
+
+.socialMediaSuccess {
+  margin-bottom: 10rem !important;
+
+  @media (max-width: @breakPointM) {
+    margin-bottom: 5rem !important;
+  }
 }
