--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -58,7 +58,7 @@
     }
   }
 
-  &.sectionNewsletter {
+  &.sectionNewsletter.sectionNewsletter {
     background-size: 25em;
     background-repeat: no-repeat;
     background-position: bottom -1px left -1px;
