fix newsletter section

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -57,7 +57,7 @@
         }
     }
 
-    &.sectionNewsletter {
+    &.sectionNewsletter.sectionNewsletter {
         background-size: 25em;
         background-repeat: no-repeat;
         background-position: bottom -1px left -1px;
