Pledge: fix non-clickable social media buttons

--- a/src/components/HurrayCrowd/style.module.less
+++ b/src/components/HurrayCrowd/style.module.less
@@ -7,6 +7,7 @@
     width: @contentWidthL;
     max-width: 90vw;
     transform: translateX(-50%);
+    pointer-events: none;
 
     &:before {
         content: '';
