style social media buttons

--- a/src/components/SocialMediaButtons/style.module.less
+++ b/src/components/SocialMediaButtons/style.module.less
@@ -2,9 +2,13 @@
 
 .iconContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 
   a:hover {
     color: var(--secondary-color);
   }
+}
+
+.link {
+  margin: 0 1em;
 }
