--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -1,7 +1,7 @@
 @import '../../style/vars.less';
 
 .header {
-  .headerFooterGrid();
+  .headerGrid();
   z-index: 10;
   position: fixed;
   top: 0;
@@ -18,7 +18,7 @@
 
 .title {
   grid-column: 2;
-  margin: .8rem 0;
+  margin: 0.8rem 0;
 }
 
 .inner {
