--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -28,26 +28,37 @@
 @breakPointM: 800px;
 @breakPointS: 500px;
 
-.headerFooterGrid() {
+.headerGrid() {
   @half: calc(@contentWidthL / 2 - 1rem);
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: 1fr minmax(0, @half) minmax(0, @half) 1fr;
 }
 
+.footerGrid() {
+  @half: calc(@contentWidthL / 2 - 4.5rem);
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns:
+    1fr minmax(0, @half) 7rem minmax(0, @half)
+    1fr;
+
+  @media (max-width: @breakPointS) {
+    grid-template-columns: 1fr minmax(0, @half) minmax(0, @half) 1fr;
+  }
+}
+
 .contentGrid() {
   display: grid;
-  grid-template-columns: [wide-start] 1fr [medium-start] 1fr [slim-start] repeat(
-      8,
-      1fr
-    ) [slim-end] 1fr [medium-end] 1fr [wide-end];
+  grid-template-columns:
+    [wide-start] 1fr [medium-start] 1fr [slim-start] repeat(8, 1fr)
+    [slim-end] 1fr [medium-end] 1fr [wide-end];
   grid-gap: 1rem;
 
   @media (max-width: @breakPointM) {
-    grid-template-columns: [wide-start medium-start] 1fr [slim-start] repeat(
-        8,
-        1fr
-      ) [slim-end] 1fr [wide-end medium-end];
+    grid-template-columns:
+      [wide-start medium-start] 1fr [slim-start] repeat(8, 1fr)
+      [slim-end] 1fr [wide-end medium-end];
   }
 
   @media (max-width: @breakPointS) {
