differently styled follow and share buttons

--- a/src/components/SocialMedia/style.module.less
+++ b/src/components/SocialMedia/style.module.less
@@ -9,6 +9,14 @@
   }
 }
 
-.link {
-  margin: 0 1em;
+.shareButtons {
+  .link {
+    margin: 0 3em;
+  }
+}
+
+.followButtons {
+  .link {
+    margin: 0;
+  }
 }
