--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -85,9 +85,10 @@
 
 .menuLink() {
   text-decoration: none;
-  box-shadow: inset 0 -0.1em currentColor;
+  box-shadow: none;
+}
 
-  &:hover {
-    box-shadow: none;
-  }
+.menuLinkUnderlined() {
+  text-decoration: none;
+  box-shadow: inset 0 -0.1em currentColor;
 }
