--- a/src/components/Layout/CTAButton/style.module.less
+++ b/src/components/Layout/CTAButton/style.module.less
@@ -11,6 +11,20 @@
 .inner {
     position: relative;
     display: inline-flex;
+    flex-wrap: wrap;
+    margin: -1rem;
+
+    > * {
+        margin: 1rem;
+    }
+
+    @media (max-width: @breakPointM) {
+        margin: -.5rem;
+
+        > * {
+            margin: .5rem;
+        }
+    }
 }
 
 .button {
