--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -85,10 +85,9 @@
 
 .menuLink() {
   text-decoration: none;
-  box-shadow: none;
-}
-
-.menuLinkUnderlined() {
-  text-decoration: none;
   box-shadow: inset 0 -0.1em currentColor;
+
+  &:hover {
+    box-shadow: none;
+  }
 }
