--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -23,6 +23,12 @@
         }
     }
 
+    &Illustration {
+        @media (min-width: @breakPointM) {
+            padding: 8rem 1rem 8rem;
+        }
+    }
+
     &:nth-child(3n+1):not(:only-child) {
         --bg-color: @yellow;
         --font-color: @red;
