--- a/src/components/Forms/Signatures/style.module.less
+++ b/src/components/Forms/Signatures/style.module.less
@@ -1,4 +1,19 @@
+@import '../../style/vars.less';
+
 .directDownloadButton {
-    margin-top: 1rem;
+    margin-top: 3rem;
     display: block;
+}
+
+.textInputContainer {
+    margin-bottom: 1rem;
+}
+
+.form {
+    font-size: @fontSizeS;
+    position: relative;
+}
+
+.hint {
+    margin-bottom: 2rem;
 }
