add twitter embed

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -127,7 +127,7 @@
     }
 }
 
-.title, .bodyText, .callToActionContainer, .emailSignup {
+.title, .bodyText, .callToActionContainer, .emailSignup, .tweetContainer {
     .contentGridSlim();
 }
 
