--- a/src/components/CampainVisualisations/style.module.less
+++ b/src/components/CampainVisualisations/style.module.less
@@ -7,14 +7,28 @@
 
 .barGoal {
   position: absolute;
-  background: var(--font-color);
   color: var(--bg-color);
   height: 5rem;
   width: 100%;
   font-size: @fontSizeM;
   display: flex;
   justify-content: flex-end;
-  padding: 0.5rem;
+
+  > div {
+    position: relative;
+    z-index: 1;
+    padding: 0.5rem;
+  }
+
+  &::before {
+    content: '';
+    background: var(--font-color);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+    transform: skewX(3.2deg) skewY(0.3deg) rotate(-0.2deg);
+  }
 }
 
 .barCurrent {
@@ -23,12 +37,22 @@
   width: 100%;
   height: 5rem;
   font-size: @fontSizeXXXL;
-  background: var(--secondary-color);
   color: var(--text-on-secondary-color);
   display: flex;
 
+  &::before {
+    content: '';
+    background: var(--secondary-color);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+    transform: skewX(-3.2deg) skewY(0.3deg) rotate(0.2deg);
+  }
+
   > div {
     position: absolute;
+    z-index: 1;
     bottom: -1rem;
     right: 1rem;
   }
