--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -7,6 +7,10 @@
     text-decoration: none;
     font-size: @fontSizeL;
 
+    &.medium {
+        font-size: @fontSizeM;
+    }
+
     &:hover {
         color: var(--bg-color);
         background: var(--font-color);
