--- a/src/components/CampainVisualisations/style.module.less
+++ b/src/components/CampainVisualisations/style.module.less
@@ -1,5 +1,22 @@
 @import '../style/vars.less';
 
+.body {
+  &.showCTA {
+    display: grid;
+    grid-template-columns: 1fr 16rem;
+    grid-gap: 2rem;
+    align-items: center;
+
+    @media (max-width: @breakPointM) {
+      flex-direction: column;
+    }
+  }
+}
+
+.cta {
+  text-align: center;
+}
+
 .bar {
   position: relative;
   height: 7.5rem;
