Menu: get in parent points

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -55,9 +55,15 @@
 }
 
 .navItem {
-  & + & {
-    margin-left: 1rem;
+  &:not(.navItemChild) {
+    & + & {
+      margin-left: 1rem;
+    }
   }
+}
+
+.navItemParent {
+  position: relative;
 }
 
 .link {
