basic collapsable menu

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -62,6 +62,18 @@
   }
 }
 
+.menuItemParentChildren {
+  position: absolute;
+  top: 100%;
+  list-style: none;
+  padding: 1rem 0 0;
+  display: none;
+
+  .navItemParent:hover & {
+    display: block;
+  }
+}
+
 .navItemParent {
   position: relative;
 }
