--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -83,7 +83,7 @@
   .navItemParent:hover &,
   .navItemParent:focus-within & {
     height: auto;
-    padding: 1rem;
+    padding: 2rem 1rem 1rem;
   }
 }
 
