CampainVisualisations: fix for mobile

--- a/src/components/CampainVisualisations/style.module.less
+++ b/src/components/CampainVisualisations/style.module.less
@@ -8,7 +8,8 @@
     align-items: center;
 
     @media (max-width: @breakPointM) {
-      flex-direction: column;
+      grid-template-columns: 1fr;
+      margin-bottom: 1rem;
     }
   }
 }
