--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -21,6 +21,7 @@
 @buttonPadding: 0.8rem 0.8rem 0.5rem;
 
 @headerHeight: 5rem;
+@headerHeightS: 4rem;
 
 @contentWidth: 45rem;
 @contentWidthL: 60rem;
