--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -8,8 +8,11 @@
   left: 0;
   right: 0;
   background: @grey;
-  grid-template-rows: 5rem;
-  height: @headerHeight;
+  grid-template-rows: @headerHeight;
+
+  @media (max-width: @breakPointS) {
+    grid-template-rows: @headerHeightS;
+  }
 }
 
 .titleLink {
@@ -104,8 +107,8 @@
 }
 
 .menuButtonBars {
-  height: 3rem;
-  width: 3rem;
+  height: 2rem;
+  width: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -115,7 +118,7 @@
 
 .menuButtonBar {
   background: @red;
-  height: 0.4rem;
+  height: 0.3rem;
 }
 
 .menuItemParentChildren {
