--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -89,7 +89,7 @@
   box-shadow: none;
 }
 
-.menuLinkUnderlined() {
+.linkUnderlined() {
   text-decoration: none;
   display: inline-block;
   box-shadow: inset 0 -0.1em currentColor;
