--- a/src/components/BlogList/style.module.less
+++ b/src/components/BlogList/style.module.less
@@ -1,3 +1,5 @@
+@import '../style/vars.less';
+
 .article {
   & + & {
     margin-top: 4rem;
@@ -6,4 +8,12 @@
 
 .title {
   margin-bottom: 1rem;
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      .linkUnderlined();
+    }
+  }
 }
