--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -79,7 +79,7 @@
   @media (max-width: @breakPointM) {
     &:not(.navItemChild) {
       & + & {
-        margin-top: .5rem;
+        margin-top: 1rem;
       }
     }
   }
@@ -88,6 +88,10 @@
 .navItemChild {
   & + & {
     margin-top: 1rem;
+
+    @media (max-width: @breakPointM) {
+      margin-top: .5rem;
+    }
   }
 }
 
@@ -147,6 +151,10 @@
 
 .navItemParent {
   position: relative;
+}
+
+.menuItemParentTitle {
+  cursor: default;
 }
 
 .link {
