--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -80,7 +80,7 @@
   @media (max-width: @breakPointM) {
     &:not(.navItemChild) {
       & + & {
-        margin-top: 0.5rem;
+        margin-top: 1rem;
       }
     }
   }
@@ -89,6 +89,10 @@
 .navItemChild {
   & + & {
     margin-top: 1rem;
+
+    @media (max-width: @breakPointM) {
+      margin-top: 0.5rem;
+    }
   }
 }
 
@@ -149,6 +153,10 @@
 
 .navItemParent {
   position: relative;
+}
+
+.menuItemParentTitle {
+  cursor: default;
 }
 
 .link {
