BlogPost: basic Typography stuff

--- a/src/components/BlogPost/style.module.less
+++ b/src/components/BlogPost/style.module.less
@@ -4,3 +4,20 @@
     font-size: @fontSizeXXL;
     margin: 0 0 1rem;
 }
+
+.body {
+    font-size: @fontSizeS;
+
+    :global .intro {
+        font-size: @fontSizeL;
+    }
+
+    h2 {
+        margin-top: 4rem;
+    }
+
+    h3 {
+        margin: 2rem 0 1rem;
+        font-size: @fontSizeM;
+    }
+}
