--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -79,6 +79,11 @@
     &.sectionPledge {
         z-index: 0;
     }
+
+    &.sectionBlogHeader {
+        padding-top: 10rem;
+        padding-bottom: 2rem;
+    }
 }
 
 .jumpToAnchor {
