BlogPost: add poster image or random graphic

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -80,6 +80,11 @@
   &.sectionPledge {
     z-index: 0;
   }
+
+  &.sectionBlogHeader {
+    padding-top: 10rem;
+    padding-bottom: 2rem;
+  }
 }
 
 .jumpToAnchor {
