--- a/src/components/BlogPost/style.module.less
+++ b/src/components/BlogPost/style.module.less
@@ -20,6 +20,14 @@
     margin: 2rem 0 1rem;
     font-size: @fontSizeM;
   }
+
+  :global .wp-block-image {
+    margin: 1rem 0;
+
+    img {
+      width: 100%;
+    }
+  }
 }
 
 .header {
