SectionHeader: refactor out from blog to re-use in other places

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -80,7 +80,7 @@
         z-index: 0;
     }
 
-    &.sectionBlogHeader {
+    &.sectionHeader {
         padding-top: 10rem;
         padding-bottom: 2rem;
     }
@@ -243,4 +243,12 @@
     @media (max-width: @breakPointS) {
         margin-top: 1rem;
     }
+}
+
+.heroImage {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
 }
