--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -83,6 +83,13 @@
     &.sectionHeader {
         padding-top: 10rem;
         padding-bottom: 2rem;
+
+        .inner {
+            > * {
+                position: relative;
+                z-index: 1;
+            }
+        }
     }
 }
 
