Sections: make title for headingSection work

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -102,7 +102,11 @@
     max-width: @contentWidthL;
     .contentGrid();
     margin: 0 auto;
-    z-index: 1;
+
+    .sectionHeader & {
+        z-index: 1;
+        position: relative;
+    }
 }
 
 .inner {
@@ -149,7 +153,7 @@
     .contentGridSlim();
 
     @media (max-width: @breakPointM) {
-        font-size: @fontSizeL;
+        font-size: @fontSizeXL;
         margin-bottom: 0;
     }
 }
