Sections: mobile optimization

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -85,6 +85,10 @@
     padding-top: 10rem;
     padding-bottom: 2rem;
 
+    @media (max-width: @breakPointM) {
+      padding-top: 5rem;
+    }
+
     .inner {
       > * {
         position: relative;
