--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -6,7 +6,8 @@
 }
 
 body {
-    font-family: 'Ideal-Bold', Tahoma, Arial, Helvetica, sans-serif;
+    font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
+    font-weight: bold;
     background: @grey;
     margin: 0;
     color: @red;
@@ -18,7 +19,6 @@ body {
 
 h1, h2, h3 {
     font-size: @fontSizeL;
-    font-weight: normal;
 
     @media (max-width: @breakPointM) {
         hyphens: auto;
@@ -27,7 +27,6 @@ h1, h2, h3 {
 
 h4 {
     font-size: @fontSizeM;
-    font-weight: normal;
 
     @media (max-width: @breakPointM) {
         hyphens: auto;
