webfonts: add regular font

--- a/src/components/style/base.less
+++ b/src/components/style/base.less
@@ -6,7 +6,8 @@
 }
 
 body {
-  font-family: 'Ideal-Bold', Tahoma, Arial, Helvetica, sans-serif;
+  font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
+  font-weight: bold;
   background: @grey;
   margin: 0;
   color: @red;
@@ -20,7 +21,6 @@ h1,
 h2,
 h3 {
   font-size: @fontSizeL;
-  font-weight: normal;
 
   @media (max-width: @breakPointM) {
     hyphens: auto;
@@ -29,7 +29,6 @@ h3 {
 
 h4 {
   font-size: @fontSizeM;
-  font-weight: normal;
 
   @media (max-width: @breakPointM) {
     hyphens: auto;
