--- a/src/components/style/webfont.less
+++ b/src/components/style/webfont.less
@@ -1,6 +1,6 @@
 /**
  * @license
- * MyFonts Webfont Build ID 3805918, 2019-09-10T06:11:55-0400
+ * MyFonts Webfont Build ID 3856732, 2020-01-15T09:43:52-0500
  *
  * The fonts listed in this notice are subject to the End User License
  * Agreement(s) entered into by the website owner. All other parties are
@@ -8,26 +8,40 @@
  *
  * You may obtain a valid license at the URLs below.
  *
+ * Webfont: Ideal-Regular by Interfont
+ * URL: https://www.myfonts.com/fonts/interfont/ideal/regular/
+ *
  * Webfont: Ideal-Bold by Interfont
  * URL: https://www.myfonts.com/fonts/interfont/ideal/bold/
- * Copyright: Copyright (c) 2019 by André Leonhardt. All rights reserved.
+ *
+ *
  * Licensed pageviews: 100,000
+ * Webfonts copyright: Copyright (c) 2019 by André Leonhardt. All rights reserved.
  *
- *
- * License: https://www.myfonts.com/viewlicense?type=web&buildid=3805918
- *
- * © 2019 MyFonts Inc
+ * © 2020 MyFonts Inc
 */
 
 /* @import must be at top of file, otherwise CSS will not work */
-@import (css) url('//hello.myfonts.net/count/3a12de');
+@import (css) url('//hello.myfonts.net/count/3ad95c');
 
 @font-face {
-  font-family: 'Ideal-Bold';
-  src: url('../../../webfonts/3A12DE_0_0.eot');
-  src: url('../../../webfonts/3A12DE_0_0.eot?#iefix')
+  font-family: 'Ideal';
+  font-weight: normal;
+  src: url('../../../webfonts/3AD95C_0_0.eot');
+  src: url('../../../webfonts/3AD95C_0_0.eot?#iefix')
       format('embedded-opentype'),
-    url('../../../webfonts/3A12DE_0_0.woff2') format('woff2'),
-    url('../../../webfonts/3A12DE_0_0.woff') format('woff'),
-    url('../../../webfonts/3A12DE_0_0.ttf') format('truetype');
+    url('../../../webfonts/3AD95C_0_0.woff2') format('woff2'),
+    url('../../../webfonts/3AD95C_0_0.woff') format('woff'),
+    url('../../../webfonts/3AD95C_0_0.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Ideal';
+  font-weight: bold;
+  src: url('../../../webfonts/3AD95C_1_0.eot');
+  src: url('../../../webfonts/3AD95C_1_0.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../../webfonts/3AD95C_1_0.woff2') format('woff2'),
+    url('../../../webfonts/3AD95C_1_0.woff') format('woff'),
+    url('../../../webfonts/3AD95C_1_0.ttf') format('truetype');
 }
