Sections: use regular for non-huge text

--- a/src/components/CampainVisualisations/style.module.less
+++ b/src/components/CampainVisualisations/style.module.less
@@ -1,6 +1,8 @@
 @import '../style/vars.less';
 
 .body {
+    font-weight: bold;
+
     &.showCTA {
         display: grid;
         grid-template-columns: 1fr 16rem;
