--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -6,6 +6,7 @@
     border-radius: @borderRadius;
     text-decoration: none;
     font-size: @fontSizeL;
+    font-weight: bold;
 
     &.medium {
         font-size: @fontSizeM;
