Sections: use regular for non-huge text

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -119,6 +119,8 @@
   word-wrap: break-word;
   max-width: 100%;
   .contentGridSlim();
+  font-weight: normal;
+  font-size: @fontSizeS;
 
   > :last-child {
     margin-bottom: 0;
@@ -142,6 +144,7 @@
 }
 
 .innerTextHuge {
+  font-weight: bold;
   @media (min-width: @breakPointM) {
     font-size: @fontSizeL;
   }
