--- a/src/components/AboutUs/style.module.less
+++ b/src/components/AboutUs/style.module.less
@@ -7,6 +7,7 @@
   grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
   grid-gap: 4rem;
   font-size: @fontSizeM;
+  font-weight: bold;
 
   @media (max-width: @breakPointM) {
     grid-gap: 2rem;
