verifizierung: smaller font size

--- a/src/pages/verifizierung/style.module.less
+++ b/src/pages/verifizierung/style.module.less
@@ -4,6 +4,14 @@
     margin: 2rem 0;
 }
 
+.finallyMessageError {
+    font-size: @fontSizeM;
+
+    @media (max-width: @breakPointS) {
+        font-size: @fontSizeS;
+    }
+}
+
 .socialMedia {
     position: relative;
     z-index: 1;
@@ -13,6 +21,6 @@
     margin-bottom: 10rem !important;
 
     @media (max-width: @breakPointM) {
-        margin-bottom: 5rem !important; 
+        margin-bottom: 5rem !important;
     }
 }
