Header: next try to fix old browsers

--- a/src/components/Layout/Header/style.module.less
+++ b/src/components/Layout/Header/style.module.less
@@ -128,7 +128,10 @@
 .menuItemParentChildren {
   list-style: none;
 
-  .navItemParent:hover &,
+  .navItemParent:hover & {
+    height: auto;
+  }
+
   .navItemParent:focus-within & {
     height: auto;
   }
